@@ -22,6 +22,7 @@
 - fix bug in type cast (liomj/goffy)
 - removed unnecessary sprintf (goffy)
 - replace ternary expression by condition (goffy)
+- using same param name during inheritance (goffy)
 
 <h5>3.5.1 Beta 1   [NOT RELEASED]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.25, PHP 8.0.12, PHP 8.1.0 Beta 4
  - semantic versioning (mamba)
